--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Sea Batlle</title>
 </head>
 <body>
   <section>
-    <div id="game_place"></div>
+    <div id="user_place"></div>
+    <div id="ships"></div>
+    <div id="block1"></div>
   </section>
 </body>
 </html>
